testing/framework/resources/Advanced/Failing/mondrian/query6376.e
5005	Andre Thompson	Andre Thompson	M	M	High School Degree	$30K - $50K
3962	Jane Rogers	Jane Rogers	M	S	High School Degree	$10K - $30K
4387	Paul Burmeister	Paul Burmeister	F	M	Bachelors Degree	$110K - $130K
7495	Sandy Melton	Sandy Melton	F	S	High School Degree	$50K - $70K
